--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
     },
     "rules": {
         "no-console" :"off",
-        "linebreak-style" : "off"
+        "linebreak-style" : "off",
+        "indent" : ["warn", 4],
+        "quotes":"off",
+        "arrow-body-style":"off"
     }
 }
