--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\objects\\moreExercises.js"
+            "program": "${workspaceFolder}\\objects\\test.js"
         }
     ]
 }
