more function and this scope demos

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\advancedFunctions\\deconstruction.js"
+            "program": "${workspaceFolder}\\advancedFunctions\\vectorMath.js"
         }
     ]
 }
