--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,18 +3,16 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
+    "extends": ["airbnb-base"],
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "rules": {
-        "no-console" :"off",
-        "linebreak-style" : "off",
-        "indent" : ["warn", 4],
+        "no-console": "off",
+        "linebreak-style": "off",
+        "indent": ["warn", 4],
         "quotes": ["warn", "double"],
-        "arrow-body-style":"off"
+        "arrow-body-style": "off"
     }
 }
