--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "linebreak-style": "off",
         "indent": ["warn", 4],
         "quotes": ["warn", "double"],
-        "arrow-body-style": "off"
+        "arrow-body-style": "off",
+        "max-len": ["error", { "ignoreComments": true }]
     }
 }
