--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/   
 
 .yarn/*
-!.yarn/cache
 !.yarn/patches
-!.yarn/plugins
 !.yarn/releases
+!.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
+.pnp.*
