--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "devDependencies": {
         "eslint": "^7.30.0",
-        "eslint-config-airbnb": "^18.2.1"
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.23.4"
     }
 }
