--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "echo Success && exit 0"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "eslint": "^7.30.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.23.4"
+        "eslint-plugin-import": "^2.23.4",
+        "nodemon": "^2.0.12"
     }
 }
