--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "indent": ["warn", 4],
         "quotes": ["warn", "double"],
         "arrow-body-style": "off",
-        "max-len": ["error", { "ignoreComments": true }]
+        "max-len": ["error", { "ignoreComments": true }],
+        "wrap-iife": ["warn", "inside"]
     }
 }
