--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Launch Program",
             "skipFiles": ["<node_internals>/**"],
-            "program": "${workspaceFolder}\\src\\YouDontKnowJS\\this-ObjectPrototypes\\call-site\\arrowFunctions.js"
+            "program": "${workspaceFolder}\\src\\YouDontKnowJS\\this-ObjectPrototypes\\objects\\propertyDescriptor.js"
         }
     ]
 }
