--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.23.4",
         "nodemon": "^2.0.12"
+    },
+    "dependencies": {
+        "immutable": "^4.0.0-rc.14"
     }
 }
