--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Launch Program",
             "skipFiles": ["<node_internals>/**"],
-            "program": "${workspaceFolder}\\src\\Functional-Lite JavaScript\\ListOperations\\exercise.js"
+            "program": "${workspaceFolder}\\src\\Functional-Lite JavaScript\\ListOperations\\composition.js"
         }
     ]
 }
